--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="{{ '/css/main.css' | append: '?v=' | append: hash }}" />
 
   {% if jekyll.environment == "production" %}
-    <script async defer data-domain="releases.elementary.io" src="https://stats.elementary.io/js/index.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script> 
+    <script async defer data-domain="releases.elementary.io" src="https://plausible.io/js/script.js"></script>
+    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
   {% endif %}
 </head>
