Fix #61: Link repo in footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       </p>
       <p><small>Last updated <time datetime="{{ site.time }}" title="{{ site.time }}">{{ site.time | date: "%b %e, %Y at %l:%M %p %Z" }}</time>.</small></p>
       {{ content | replace: '<a href="http', '<a rel="nofollow noopener noreferrer" target="_blank" href="http' }}
+      <p><small><a rel="nofollow noopener noreferrer" href="https://github.com/elementary/releases">View Source on GitHub</a></small></p>
     </section>
   </body>
 </html>
